27-6-2022 second time updated design

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,65 +1,76 @@
-.video-container {
-    height: 80vh;
+#about-container .video-container {
+  height: 80vh;
 }
 
-.video-container > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+#about-container .video-container > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #about-container > section {
-    margin: 8rem 10rem;
-    text-align: center;
+  margin: 8rem 10rem;
+  text-align: center;
+}
+
+.about-content {
+  background-color: #f1f0f0;
 }
 
 .about-slides {
-    background-color: #F1F0F0;
-    padding: 10rem;
+  padding: 10rem;
 }
 
 .about-slides > section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: wrap row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap row;
 }
 
 .about-slides > section > div {
-    flex: 1 300px;
-    margin: 3rem;
+  flex: 1 300px;
+  margin: 3rem;
 }
 
 .about-img-container {
-    max-height: 500px;
+  max-height: 500px;
 }
 
 .about-img-container > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .about-slides > section p {
-    line-height: 2;
-    text-align: justify;
+  line-height: 2;
+  text-align: justify;
+}
+
+.about-slides > section:nth-child(2) {
+  flex-direction: row-reverse;
 }
 
 @media screen and (max-width: 500px) {
-    #about-container > section {
-        margin: 1rem 1rem;
-        text-align: center;
-    }
-    section p {
-        width: auto;
-    }
-    .video-container {
-        height: auto;
-    }
-    .about-slides {
-        padding: 0;
-    }
-    .about-slides > section > div {
-        margin: 1rem;
-    }
+  #about-container > section {
+    margin: 1rem 1rem;
+    text-align: center;
+  }
+  #about-container section p {
+    width: auto;
+  }
+  #about-container .video-container {
+    height: auto;
+  }
+  .about-slides {
+    padding: 0;
+  }
+  .about-slides > section > div {
+    margin: 1rem;
+  }
+
+  /* .about-slides > section:nth-child(2) {
+    flex-direction: column-reverse;
+  } */
 }
