--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,39 @@
+/* @font-face {
+  font-family: "Lato";
+  src: url("../static/Lato/Lato-Regular.ttf");
+} */
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../static/Roboto/Roboto-Regular.ttf");
+}
+
 * {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Roboto", sans-serif;
+}
+
+p {
+  font-size: 16px;
+}
+
+@media screen and (max-width: 500px) {
+  p,
+  span {
+    font-size: 12px;
+  }
+
+  h3 {
+    font-size: 15px;
+  }
+
+  h2 {
+    font-size: 19px;
+  }
+
+  a,
+  button {
+    font-size: 12px;
+  }
 }
 
 /* *[data-aos], *[data-aos] * {
@@ -7,7 +41,7 @@
 } */
 
 body {
-  max-width: 1550px;
+  /* max-width: 1550px; */
   margin: 0 auto;
   overflow-x: hidden;
 }
@@ -21,7 +55,7 @@ header {
 }
 
 nav {
-  padding: 0.5rem 3rem;
+  padding: 0.78rem 3rem;
   width: 100vw;
   background-color: #292929;
   display: grid;
@@ -30,11 +64,12 @@ nav {
 
 nav > ul {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
+  align-items: flex-end;
 }
 
 nav li::marker {
-  content: '';
+  content: "";
 }
 
 nav li {
@@ -44,6 +79,11 @@ nav li {
 nav a {
   color: #fff;
   text-decoration: none;
+  /* font-weight: bold; */
+}
+
+nav a:hover {
+  font-weight: bold;
 }
 
 nav > div {
@@ -52,7 +92,7 @@ nav > div {
 }
 
 nav > ul img {
-  height: 3rem;
+  height: 2.5rem;
 }
 
 nav > div img {
@@ -60,32 +100,35 @@ nav > div img {
 }
 
 @media screen and (max-width: 500px) {
-
   nav {
-      padding: 0.3rem 0px;
-      font-size: 14px;
-      grid-template-columns: 1fr;
+    padding: 0.3rem 0px;
+    font-size: 14px;
+    grid-template-columns: 1fr;
   }
 
   nav > ul img {
-      height: 2rem;
+    height: 2rem;
   }
 
   nav > div {
-      display: none;
-      width: 0;
-      height: 0;
-      visibility: 0;
+    display: none;
+    width: 0;
+    height: 0;
+    visibility: 0;
   }
 
   nav > ul {
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
   }
 
   nav li {
-      margin-right: 12px;
+    margin-right: 12px;
+  }
+
+  nav a {
+    font-size: 12px;
   }
 }
 
@@ -94,11 +137,12 @@ nav > div img {
 /* slide style start */
 main {
   margin-top: 68px;
+  position: relative;
 }
 
 @media screen and (max-width: 500px) {
   main {
-      margin-top: 36.85px;
+    margin-top: 36.85px;
   }
 }
 
@@ -108,23 +152,24 @@ main {
 .content-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem;
+  justify-content: flex-start; /* changed */
+  align-items: flex-start; /* changed */
+  /* margin: 2rem; */
 }
 
-.content-container > div:nth-child(1) {
+.content-container .home-slide-content:nth-child(1) {
   flex: 1 400px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  text-align: start;
 }
 
-.content-container > div:nth-child(2) {
+.content-container .home-slide-image:nth-child(2) {
   flex: 1 300px;
   padding-block: 6rem;
 }
 
-.content-container > div > img {
+.content-container .home-slide-image > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -136,9 +181,10 @@ main {
 }
 
 .content-container p {
-  line-height: 2.5;
+  line-height: 1.7;
   text-align: justify;
   margin-block: 2rem;
+  margin-block-end: 3rem;
 }
 /*// content-container style end */
 
@@ -157,16 +203,20 @@ main {
 }
 
 #how-it-work li:nth-child(1) {
-  background-image: url(../static/icons/starIcon.png);
+  background-image: url(../static/icons/starIcon.svg);
 }
 
 #how-it-work li:nth-child(2) {
-  background-image: url(../static/icons/gif.png);
+  background-image: url(../static/icons/gif.svg);
 }
 
 /*// how-it-work style end */
 
 /* vip-card style start */
+#vip-card .vip-card-bg {
+  background-color: #d3d2d2;
+}
+
 #vip-card > div:nth-child(2) {
   padding: 5rem;
 }
@@ -200,7 +250,8 @@ a.read-more:active {
   background-color: gray;
 }
 
-a.read-more-secondary:hover, a.read-more-secondary:focus {
+a.read-more-secondary:hover,
+a.read-more-secondary:focus {
   color: black;
   background-color: white;
   border: 1px solid black;
@@ -220,7 +271,8 @@ a.read-more-secondary {
 /*// general style end */
 
 /* articles style start */
-#articles, .articles {
+#articles,
+.articles {
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -248,8 +300,21 @@ a.read-more-secondary {
   height: 100%;
 }
 
-.img-container::after {
-  content: '';
+/* .img-container::after {
+  content: "";
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding-block: 0;
+  opacity: 0;
+  transition: all 1s ease;
+} */
+
+.product-label {
   text-align: center;
   position: absolute;
   bottom: 0;
@@ -263,40 +328,30 @@ a.read-more-secondary {
   transition: all 1s ease;
 }
 
-.img-container:hover::after {
+/* .img-container:hover::after {
+  opacity: 1;
+  padding-block: 1rem;
+} */
+
+.img-container:hover > .product-label {
   opacity: 1;
   padding-block: 1rem;
 }
 
-.img-container:nth-child(1):after {
-  content: 'Colorful Air pot case';
-}
-.img-container:nth-child(2):after {
-  content: 'Nice phone back cover';
-}
-.img-container:nth-child(3):after {
-  content: 'Beautiful cartoon sticker';
-}
-.img-container:nth-child(4):after {
-  content: 'Samsung flig';
-}
-.img-container:nth-child(5):after {
-  content: 'Colorful Air pot case';
-}
-.img-container:nth-child(6):after {
-  content: 'Colorful Air pot case';
-}
-
 @media screen and (max-width: 500px) {
   #articles {
-      margin: 1rem;
+    margin: 1rem;
   }
   .articles-content {
-      margin: 0;
+    margin: 0;
   }
   .article-container {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+
+  a.read-more-secondary {
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -306,8 +361,8 @@ a.read-more-secondary {
 
 #as-seen-in {
   margin-block-start: 3rem;
-  height: 80vh;
-  background-image: url('../static/images/image15.png');
+  height: 60vh;
+  background-image: url("../static/images/image15.png");
   background-repeat: no-repeat;
   background-size: cover;
   /* position: relative; */
@@ -316,13 +371,24 @@ a.read-more-secondary {
   align-items: center;
 }
 
+#as-seen-in > div {
+  flex: 3;
+}
+
 #as-seen-in .cart {
+  margin: 0 auto;
   padding: 3rem;
-  background-color: rgba(255, 255, 255, 0.849);
+  width: 500px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+#as-seen-in > div:nth-child(2) {
+  flex: 2;
+  text-align: center;
 }
 
 #as-seen-in .phone-img {
-  height: 480px;
+  height: 380px;
 }
 
 #as-seen-in .phone-img > img {
@@ -340,7 +406,8 @@ a.read-more-secondary {
   background-color: rgb(163, 162, 162);
 }
 
-.view-our-work:hover, .view-our-work:focus {
+.view-our-work:hover,
+.view-our-work:focus {
   border: 1px solid rgb(163, 162, 162);
   background-color: transparent;
   color: black;
@@ -353,31 +420,34 @@ a.read-more-secondary {
 
 @media screen and (max-width: 500px) {
   #as-seen-in {
-      height: 480px;
+    height: 480px;
   }
 
   #as-seen-in .cart {
-      padding: 1rem;
+    padding: 1rem;
   }
 
   #as-seen-in h3 {
-      margin-block: 1rem;
+    margin-block: 1rem;
   }
 
   #as-seen-in p {
-      margin-block: 1rem;
+    margin-block: 1rem;
   }
 }
 
-/* as-seen-in style end */ 
+/* as-seen-in style end */
 
 /* footer style start */
 footer {
-  background-color: #2E2B2B;
+  background-color: #1b1a1a;
   color: white;
-  padding: 2rem;
   padding-bottom: 0.5rem;
   line-height: 2.5;
+}
+
+footer * {
+  font-family: "Roboto", sans-serif;
 }
 
 footer a {
@@ -385,13 +455,30 @@ footer a {
   color: white;
 }
 
-footer a:hover, footer a:focus {
+footer a:hover,
+footer a:focus {
   text-decoration: underline;
 }
 
+.footer-container {
+  background-color: #37383c;
+}
+
 footer .footer-content {
+  width: 80%;
   display: flex;
   flex-flow: wrap row;
+  padding-block: 1.5rem;
+  margin: 0 auto;
+}
+
+.footer-content > div:nth-child(1),
+.footer-content > div:nth-child(3) {
+  flex: 3;
+}
+
+.footer-content > div:nth-child(2) {
+  flex: 5;
 }
 
 footer > div:nth-child(2) {
@@ -408,25 +495,25 @@ footer > div:nth-child(2) > ul > li {
 }
 
 footer > div:nth-child(2) > ul > li::marker {
-  content: '';
+  content: "";
 }
 
 .footer-content > div {
   flex: 1 300px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 /* .footer-content > div:nth-child(1) img {
   height: 100px;
 } */
 
-.footer-content > div:nth-child(1), .footer-content > div:nth-child(3) {
+.footer-content > div:nth-child(1) {
   flex-flow: column;
 }
 
-.footer-content > div:nth-child(1) {
+.footer-content > div:nth-child(3) {
   align-items: flex-start;
 }
 
@@ -436,17 +523,29 @@ div.more-footer {
 }
 
 div.more-footer li::marker {
-  content: '';
+  content: "";
+}
+
+.follow-us {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #37383c;
+  padding-block-end: 1rem;
+}
+
+.follow-us > h4 {
+  margin: 0;
+  margin-block-end: 0.3rem;
 }
 
 .logo-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
+  gap: 30px;
   justify-content: center;
   align-items: center;
-  height: 40px;
-  width: 160px;
 }
 
 /* .footer-content > div:nth-child(1) img {
@@ -466,7 +565,7 @@ div.more-footer li::marker {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-block: 2rem;
+  margin-block: 1rem;
 }
 
 #footer-logo-container > img {
@@ -479,9 +578,9 @@ div.more-footer li::marker {
 
 .download-btn-container > a:nth-child(1) {
   display: inline-block;
-  width: clamp(80px, 10vw, 250px);
+  width: clamp(100px, 8vw, 250px);
   height: 50px;
-  background-image: url('../static/images/app_store.png');
+  background-image: url("../static/images/appStoreLogo.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
@@ -490,50 +589,63 @@ div.more-footer li::marker {
 
 .download-btn-container > a:nth-child(2) {
   display: inline-block;
-  width: clamp(80px, 10vw, 250px);
+  width: clamp(100px, 8vw, 250px);
   height: 50px;
-  background-image: url('../static/images/google_play.png');
+  background-image: url("../static/images/googlePlayLogo.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
 }
 
-#footer-download-links-container > h5 {
+#footer-download-links-container > h3 {
   margin: 0;
 }
 
 @media screen and (max-width: 500px) {
   footer {
-      padding: 0px 1rem;
-      font-size: 12px;
+    padding: 0px 0rem;
+    font-size: 12px;
   }
 
   .footer-content > div {
-      margin: 0.5rem;
+    margin: 0.5rem;
   }
 
   .footer-content > div:nth-child(1) {
-      align-items: center;
-      text-align: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer-content > div:nth-child(3) {
+    align-items: center;
+    text-align: center;
   }
 
   .footer-content > div:nth-child(2) {
-      /* align-items: center; */
-      text-align: center;
+    /* align-items: center; */
+    text-align: center;
   }
 
   footer > div:nth-child(2) {
-      font-size: 10px;
+    font-size: 10px;
   }
   footer > div:nth-child(2) > ul > li {
-      margin-inline: 5px;
+    margin-inline: 5px;
+  }
+
+  #footer-logo-container > img {
+    width: 15vw;
+  }
+
+  .logo-container {
+    gap: 15px;
   }
 }
 
 /* footer style start */
 
 #slideshow {
-  height: 70vh;
+  height: 80vh;
 }
 
 .swiper {
@@ -571,4 +683,56 @@ div.more-footer li::marker {
   #slideshow {
     height: 190px;
   }
+
+  .content-container .home-slide-image:nth-child(2) {
+    padding-block: 1rem;
+  }
+
+  .phone-img {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+
+  #as-seen-in {
+    justify-content: center;
+    align-items: center;
+  }
+
+  #as-seen-in > div {
+    /* align-self: center; */
+    flex: unset;
+  }
+
+  #as-seen-in .cart {
+    width: auto;
+    margin-inline: 1.5rem;
+  }
+
+  .content-container p {
+    margin-block: 1rem;
+  }
+
+  #how-it-work ul {
+    line-height: 1.2;
+  }
+
+  #vip-card > div:nth-child(2) {
+    padding: 3rem;
+  }
+
+  #how-it-work li {
+    font-size: 12px;
+  }
+
+  #how-it-work li {
+    background-size: 0.9rem 0.9rem;
+  }
+}
+
+.content {
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-inline: 1rem;
 }
