--- a/src/styles/vlog.css
+++ b/src/styles/vlog.css
@@ -1,73 +1,88 @@
-.video-container {
-    height: 80vh;
+/* .video-container {
+  height: 80vh;
+} */
+
+#vlog-container > h1 {
+  margin: 0;
+  padding: 2rem;
+  text-align: center;
 }
 
 .video-container > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
-section {
-    margin: 8rem 5rem;
+.vlog-content {
+  margin-block: 3rem;
+  word-break: break-all;
 }
 
-section p {
-    width: 80%;
-    line-height: 2;
-}
+/* .blog-full-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+/* .blog-img-content > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
 
-.blog-full-img > img, .blog-img-content > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.blog-image-conatiner {
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    gap: 10px;
+/* .blog-image-conatiner {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 10px;
 }
 
 .blog-image-conatiner > .first {
-    grid-row: 1;
-    grid-column: 1 / -1;
-    margin-block: 5rem;
+  grid-row: 1;
+  grid-column: 1 / -1;
+  margin-block: 5rem;
 }
 
 .blog-image-conatiner > .second {
-    grid-row: 2;
-    grid-column: 1 / 2;
-    position: relative;
+  grid-row: 2;
+  grid-column: 1 / 2;
+  position: relative;
 }
 
 .blog-image-conatiner > .third {
-    grid-row: 2;
-    grid-column: 2 / 3;
+  grid-row: 2;
+  grid-column: 2 / 3;
 }
 
 .blog-image-conatiner > .second > img {
-    position: relative;
-    width: 80%;
-    height: 60%;
-} 
-
-.blog-image-conatiner > .third > img {
-    position: relative;
-    bottom: -10%;
-    right: -10%;
-    width: 90%;
-    height: 90%;
+  position: relative;
+  width: 80%;
+  height: 60%;
 }
 
+.blog-image-conatiner > .third > img {
+  position: relative;
+  bottom: -10%;
+  right: -10%;
+  width: 90%;
+  height: 90%;
+} */
+
 @media screen and (max-width: 500px) {
-    section {
-        margin: 1rem 1rem;
-    }
-    section p {
-        width: auto;
-    }
-    .video-container {
-        height: auto;
-    }
+  #vlog-container section {
+    margin: 1rem 1rem;
+  }
+  /* section p {
+    width: auto;
+  } */
+  #vlog-container .video-container {
+    height: auto;
+  }
+
+  #vlog-container .vlog-content {
+    margin-inline: 0.5rem;
+  }
+
+  #vlog-container > h1 {
+    padding: 1rem;
+  }
 }
